--- a/C_codes_MCU_SimplicityStudio/UWB-Localization-1.0_Node/.cproject
+++ b/C_codes_MCU_SimplicityStudio/UWB-Localization-1.0_Node/.cproject
@@ -201,4 +201,5 @@
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
 	</storageModule>
+	<storageModule moduleId="refreshScope"/>
 </cproject>
